<resources>
    <string name="app_name">Rick And Morty App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_title">Let\'s Get Riggity Riggity Wrecked Son!</string>
    <string name="dashboard_text">This is Dashboard</string>
    <string name="character_text">This is Character Fragment</string>
    <string name="view_character">View Character</string>
    <string name="location">Location</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin</string>
    <string name="name">Name:</string>
    <string name="type">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="status">Status:</string>
    <string name="character_name">Character Name</string>
    <string name="avatar">avatar</string>
</resources>